; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/message/i2o/extr_debug.c_i2o_report_common_status.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/message/i2o/extr_debug.c_i2o_report_common_status.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@i2o_report_common_status.REPLY_STATUS = internal global [12 x i8*] [i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i32 0, i32 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.1, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.2, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.3, i32 0, i32 0), i8* getelementptr inbounds ([12 x i8], [12 x i8]* @.str.4, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.5, i32 0, i32 0), i8* getelementptr inbounds ([23 x i8], [23 x i8]* @.str.6, i32 0, i32 0), i8* getelementptr inbounds ([20 x i8], [20 x i8]* @.str.7, i32 0, i32 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.8, i32 0, i32 0), i8* getelementptr inbounds ([31 x i8], [31 x i8]* @.str.9, i32 0, i32 0), i8* getelementptr inbounds ([18 x i8], [18 x i8]* @.str.10, i32 0, i32 0), i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str.11, i32 0, i32 0)], align 16
@.str = private unnamed_addr constant [8 x i8] c"SUCCESS\00", align 1
@.str.1 = private unnamed_addr constant [12 x i8] c"ABORT_DIRTY\00", align 1
@.str.2 = private unnamed_addr constant [23 x i8] c"ABORT_NO_DATA_TRANSFER\00", align 1
@.str.3 = private unnamed_addr constant [23 x i8] c"ABORT_PARTIAL_TRANSFER\00", align 1
@.str.4 = private unnamed_addr constant [12 x i8] c"ERROR_DIRTY\00", align 1
@.str.5 = private unnamed_addr constant [23 x i8] c"ERROR_NO_DATA_TRANSFER\00", align 1
@.str.6 = private unnamed_addr constant [23 x i8] c"ERROR_PARTIAL_TRANSFER\00", align 1
@.str.7 = private unnamed_addr constant [20 x i8] c"PROCESS_ABORT_DIRTY\00", align 1
@.str.8 = private unnamed_addr constant [31 x i8] c"PROCESS_ABORT_NO_DATA_TRANSFER\00", align 1
@.str.9 = private unnamed_addr constant [31 x i8] c"PROCESS_ABORT_PARTIAL_TRANSFER\00", align 1
@.str.10 = private unnamed_addr constant [18 x i8] c"TRANSACTION_ERROR\00", align 1
@.str.11 = private unnamed_addr constant [16 x i8] c"PROGRESS_REPORT\00", align 1
@.str.12 = private unnamed_addr constant [22 x i8] c"RequestStatus = %0#2x\00", align 1
@.str.13 = private unnamed_addr constant [3 x i8] c"%s\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i64)* @i2o_report_common_status to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @i2o_report_common_status(i64 %0) #0 {
  %2 = alloca i64, align 8
  store i64 %0, i64* %2, align 8
  %3 = load i64, i64* %2, align 8
  %4 = call i64 @ARRAY_SIZE(i8** getelementptr inbounds ([12 x i8*], [12 x i8*]* @i2o_report_common_status.REPLY_STATUS, i64 0, i64 0))
  %5 = icmp uge i64 %3, %4
  br i1 %5, label %6, label %9

6:                                                ; preds = %1
  %7 = load i64, i64* %2, align 8
  %8 = call i32 (i8*, ...) @printk(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.12, i64 0, i64 0), i64 %7)
  br label %14

9:                                                ; preds = %1
  %10 = load i64, i64* %2, align 8
  %11 = getelementptr inbounds [12 x i8*], [12 x i8*]* @i2o_report_common_status.REPLY_STATUS, i64 0, i64 %10
  %12 = load i8*, i8** %11, align 8
  %13 = call i32 (i8*, ...) @printk(i8* getelementptr inbounds ([3 x i8], [3 x i8]* @.str.13, i64 0, i64 0), i8* %12)
  br label %14

14:                                               ; preds = %9, %6
  ret void
}

declare dso_local i64 @ARRAY_SIZE(i8**) #1

declare dso_local i32 @printk(i8*, ...) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
